--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
 </style>
 </head>
-<frameset rows="20%,*" scroling=no>
+<frameset rows="20%,*" scroling=no noresize  frameborder="0">
 <frame src="header.html" width="100px" scroling=no>
-<frameset cols="20%,*">
+<frameset cols="20%,*" noresize>
 <frame src="nav.html">
 <frame src="login.html" name="page">
 </frameset>
