--- a/header.html
+++ b/header.html
@@ -27,7 +27,7 @@ img[src="logo.jfif"]{
 			<td colspan=5>Phoniex Learning</td>
 		</tr>
 		<tr>
-			<td><a href="#">Home</a></td>
+			<td><a href="description.html" target="page">Home</a></td>
 			<td><a href="login.html" target="page">
 Login</a></td>			
 			<td><a href="registration.html" target="page">Regestration</a></td>
