--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <frame src="header.html" width="100px" scroling=no>
 <frameset cols="20%,*" noresize>
 <frame src="nav.html">
-<frame src="login.html" name="page">
+<frame src="description.html" name="page">
 </frameset>
 </frameset>
 
