--- a/catalouge.html
+++ b/catalouge.html
@@ -2,6 +2,9 @@
 	<head>
 		<title>Catalouge -Page</title>
 		<style>
+			body{
+				padding: 50px;
+			}
 			td{
 		padding:10px;
 width:300px;
@@ -27,6 +30,7 @@ width:300px;
 		</style>
 	</head>
 <body>
+	<h1 style="text-align: center;">Catalouge</h1>
 	<table>
 		<tr>
 			<td><img src="download.JFIF"></td>
