--- a/civil.html
+++ b/civil.html
@@ -1,1 +1,18 @@
-i am civil page
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body><div class="container">
+    <h1> Civil Engineering</h1>
+    <p>
+        Civil engineering is a branch of engineering that focuses on the design, construction, and maintenance of infrastructure and facilities essential for modern society. Civil engineers work on a wide range of projects, including the design and construction of buildings, bridges, roads, dams, airports, water supply systems, wastewater treatment plants, and more. They are responsible for ensuring the safety, functionality, and sustainability of these structures and systems.
+<br>
+        Civil engineering plays a critical role in shaping the physical environment in which we live, work, and travel. It involves various sub-disciplines, such as structural engineering, transportation engineering, environmental engineering, and geotechnical engineering, among others. Civil engineers work closely with architects, urban planners, environmental scientists, and construction professionals to plan and execute projects that improve the quality of life and contribute to economic development.
+    </p>
+</div>
+</body>
+</html>
