--- a/cse.html
+++ b/cse.html
@@ -1,1 +1,17 @@
-I am cse pGE
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+    <h1>Computer Science and Engineering</h1>
+    <p>
+        Computer Science and Engineering (CSE) is a multidisciplinary field that combines principles from computer science and electrical engineering to design, develop, and optimize computer systems and technologies. It encompasses the study of algorithms, data structures, programming languages, hardware design, and software development, with the goal of creating efficient and innovative solutions to a wide range of technological challenges. CSE professionals play a crucial role in advancing computing technologies, from building software applications to designing computer hardware, networking systems, and more. They also explore emerging fields like artificial intelligence, cybersecurity, and quantum computing, driving advancements that shape the modern digital world.
+    </p>
+</div>
+</body>
+</html>
