--- a/ece.html
+++ b/ece.html
@@ -1,1 +1,17 @@
-i am ece page
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+    <h1>Electrical and Computer Engineering</h1>
+    <p>
+        It is a branch of engineering that focuses on the study and application of electrical systems, electronics, and computer technology. ECE professionals design, develop, and maintain a wide range of systems and devices, including electrical circuits, communication systems, computer hardware, and software. This field spans from the design of microchips and integrated circuits to the development of power generation and distribution systems. ECE engineers play a pivotal role in shaping modern technologies, such as smartphones, renewable energy systems, robotics, and the Internet of Things (IoT).
+     </p>
+    </div>
+</body>
+</html>
