--- a/eee.html
+++ b/eee.html
@@ -1,1 +1,17 @@
-i ama eee page
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+    <h1> Electrical and Electronics Engineering</h1>
+    <p>
+     It is a specialized field of engineering that deals with the study, design, development, and application of electrical and electronic systems and devices. EEE professionals work on a wide range of technologies, including power generation and distribution, electrical circuits, control systems, electronic devices, and telecommunications systems. They play a crucial role in designing and maintaining electrical infrastructure, as well as developing innovative electronic devices and systems, such as smartphones, computers, medical equipment, and renewable energy technologies. EEE engineers contribute to advancements that power our modern world and enable various electronic innovations.
+</p>
+</div>
+</body>
+</html>
