--- a/nav.html
+++ b/nav.html
@@ -1,26 +1,22 @@
 <html>
-
-<head>
-<title>Vivek Yadav</title>
-<style>
-td{padding:20px;}
-</style>
-</head>
-<body>
-	<table>
-		<tr>
-			<td><a href="cse.html" target="page">CSE</a></td>
-		</tr>
-		<tr>
-<td><a href="ece.html" target="page">ECE</a></td>
-		</tr>
-		<tr>
-<td><a href="eee.html" target="page">EEE</a></td>
-		</tr>
-		<tr>
-<td><a href="civil.html" target="page">CIVIL</a></td>
-		</tr>
-	</table>
-</body>
-
+  <head>
+    <title>Vivek Yadav</title>
+    <link rel="stylesheet" href="nav-style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="child">
+        <a href="cse.html" target="page">CSE</a>
+      </div>
+      <div class="child">
+        <a href="ece.html" target="page">ECE</a>
+      </div>
+      <div class="child">
+      <a href="eee.html" target="page">EEE</a>
+      </div>
+      <div class="child">
+      <a href="civil.html" target="page">CIVIL</a>
+      </div>
+    </div>
+  </body>
 </html>
