--- a/catalouge.html
+++ b/catalouge.html
@@ -2,35 +2,12 @@
 	<head>
 		<title>Catalouge -Page</title>
 		<style>
-			body{
-				padding: 50px;
-			}
-			td{
-		padding:10px;
-width:300px;
-}
-
-	td img.img{
-		height:70px;
-		width:200px;
-}
-.message-container {
-	position: fixed;
-	bottom: 20px;
-	right: -100%; /* Initially hidden on the right */
-	background-color: #FF6600;
-	color: #fff;
-	width: auto;
-	height: auto;
-	padding: 10px 20px;
-	border-radius: 5px;
-	transition: right 0.5s ease-in-out;
-}
 
 		</style>
+<link rel="stylesheet" href="catalouge-style.css">
 	</head>
 <body>
-	<h1 style="text-align: center;">Catalouge</h1>
+	<h1 style="text-align: center;margin: 50px;">Catalouge</h1>
 	<table>
 		<tr>
 			<td><img src="download.JFIF"></td>
