--- a/header.html
+++ b/header.html
@@ -1,40 +1,24 @@
 <html>
-	<head>
-		<title>First Webpage</title>
-		<style>
-body{overflow:hidden;}
-		table{
-			width:100vw;
-			heigh: 100vh;
-}
-			td{	
-			border:1px solid #000;
-			padding:10px 10px;
-			text-align:center;
-}
-img[src="logo.jfif"]{
-	padding: 0px;
-	width: 50px;
-	height:50px;
-}
-		</style>
-	</head>
-	<body>
+  <head>
+    <title>First Webpage</title>
+    <style>
 
-	<table>
-		<tr>
-			<td><img src="logo.jfif"></td>
-			<td colspan=5>Phoniex Learning</td>
-		</tr>
-		<tr>
-			<td><a href="description.html" target="page">Home</a></td>
-			<td><a href="login.html" target="page">
-Login</a></td>			
-			<td><a href="registration.html" target="page">Regestration</a></td>
-			<td><a href="catalouge.html" target="page">catalouge</a></td>
-			<td><a href="cart.html" target="page">Cart</a></td>
-		</tr>
-	</table>
-	
-	</body>
+	</style>
+<link rel="stylesheet" href="header-style.css">
+</head>
+  <body>
+    <table>
+      <tr>
+        <td><img src="logo.jfif" /></td>
+        <td colspan="5" class="heading">Phoniex Learning</td>
+      </tr>
+      <tr>
+        <td><a href="description.html" target="page">Home</a></td>
+        <td><a href="login.html" target="page"> Login</a></td>
+        <td><a href="registration.html" target="page">Regestration</a></td>
+        <td><a href="catalouge.html" target="page">Catalouge</a></td>
+        <td><a href="cart.html" target="page">Cart</a></td>
+      </tr>
+    </table>
+  </body>
 </html>
