just fix some responsiveness

--- a/catalouge.html
+++ b/catalouge.html
@@ -10,7 +10,7 @@
 	<h1 style="text-align: center;margin: 50px;">Catalouge</h1>
 	<table>
 		<tr>
-			<td><img src="download.JFIF"></td>
+			<td><img src="download.jfif"></td>
 			<td>Book:XML Bible<br>Auhor:Wiston<br>Publication:wiely</td>
 			<td>$40.5</td>
 			<td><button><img data-product="XML Bible"  class="add-to-cart-button"   class="img" src="add2cart.jfif"></button></td>
@@ -22,7 +22,7 @@
 			<td><button><img  data-product="AI" class="add-to-cart-button"  class="img" src="add2cart.jfif"></button></td>
 		</tr>
 		<tr>
-			<td><img src="download.JFIF"></td>
+			<td><img src="download.jfif"></td>
 			<td>Book:Java 2<br>Auhor:Waston<br>BPB Publications</td>
 			<td>$35.5</td>
 			<td><button><img  class="add-to-cart-button"   data-product="Java 2"  class="img" src="add2cart.jfif"></button></td>
