--- a/description.html
+++ b/description.html
@@ -17,7 +17,7 @@ h1{
         transition: 400ms;
 }
 p{
-    line-height: 2vw;
+    line-height: calc(2vh-3vw);
 }
       h1+p{
         padding: 10px;
@@ -31,6 +31,9 @@ p{
         padding: 10px;
         border-radius: 1vw;
       }
+h1{
+  font-size: 4vw;
+}
       h1.heading{
         background-color: black;
         color: #fff;
@@ -38,6 +41,7 @@ p{
         padding: 10px 20px;
       }
       h2.heading{
+        font-size: 3.4vw;
         text-align: center;
         background-color: #000;
         color: #fff;
